<resources>
    <string name="app_name">TechLift</string>
    
    <!-- Login and Registration -->
    <string name="login_title">התחברות</string>
    <string name="register_title">הרשמה</string>
    <string name="email_hint">דוא״ל</string>
    <string name="password_hint">סיסמה</string>
    <string name="name_hint">שם מלא</string>
    <string name="login_button">התחבר</string>
    <string name="register_button">הירשם</string>
    <string name="register_link">אין לך חשבון? הירשם כאן</string>
    <string name="login_link">יש לך כבר חשבון? התחבר כאן</string>
    <string name="error_email_required">יש להזין כתובת דוא״ל</string>
    <string name="error_password_required">יש להזין סיסמה</string>
    <string name="error_name_required">יש להזין שם מלא</string>
    <string name="error_invalid_email">כתובת דוא״ל לא תקינה</string>
    <string name="error_password_short">הסיסמה חייבת להכיל לפחות 6 תווים</string>
    
    <!-- Additional Login and Registration strings -->
    <string name="welcome">ברוכים הבאים ל-TechLift</string>
    <string name="email">דוא״ל</string>
    <string name="password">סיסמה</string>
    <string name="login">התחבר</string>
    <string name="register">הירשם</string>
    <string name="personal_details">פרטים אישיים</string>
    <string name="full_name">שם מלא</string>
    <string name="phone_number">מספר טלפון</string>
    <string name="path_details">פרטי מסלול</string>
    <string name="have_degree">האם יש לך תואר אקדמי?</string>
    <string name="degree_field">תחום התואר</string>
    <string name="degree_advice_title">המלצות לתחומי לימוד</string>
    <string name="degree_advice_desc">תחומי לימוד מומלצים להייטק:</string>
    <string name="degree_advice_computer_science">מדעי המחשב</string>
    <string name="degree_advice_computer_science_desc">תואר במדעי המחשב מספק בסיס תיאורטי חזק ומיומנויות פרקטיות</string>
    <string name="degree_advice_software_engineering">הנדסת תוכנה</string>
    <string name="degree_advice_software_engineering_desc">תואר בהנדסת תוכנה מתמקד בפיתוח מערכות תוכנה מורכבות</string>
    <string name="show_more_degrees">הצג עוד תחומי לימוד</string>
    <string name="focus_on_studies">במה תרצה להתמקד בלימודים?</string>
    <string name="select_specialization">בחר תחום התמחות</string>
    <string name="select_experience">רמת ניסיון</string>
    <string name="search_path">חפש מסלול</string>
    
    <!-- Home Screen -->
    <string name="dashboard">לוח בקרה</string>
    <string name="hello_user">שלום, %1$s</string>
    <string name="daily_challenge">אתגר יומי</string>
    <string name="daily_challenge_desc">אתגר קוד יומי לשיפור מיומנויות התכנות שלך</string>
    <string name="roadmaps">קורסים נוכחיים</string>
    <string name="roadmaps_desc">קורסי למידה מותאמים אישית לפיתוח קריירה בהייטק</string>
    <string name="practice">סביבת תרגול</string>
    <string name="practice_desc">תרגל קידוד עם תרגילים אינטראקטיביים ומשימות מעשיות</string>
    <string name="interviews">שאלות ראיון</string>
    <string name="interviews_desc">הכן את עצמך לראיונות עבודה עם שאלות ותשובות נפוצות</string>
    <string name="projects">פרויקטים מוצעים</string>
    <string name="projects_desc">בנה פרויקטים מעשיים כדי להעשיר את התיק העבודות שלך</string>
    <string name="community">קהילה</string>
    <string name="community_desc">התחבר עם מפתחים אחרים, שאל שאלות וקבל עזרה</string>
    
    <!-- Roadmaps -->
    <string name="roadmap_title">מפות דרכים</string>
    <string name="progress">התקדמות: %1$d%%</string>
    <string name="start_roadmap">התחל מסלול</string>
    <string name="continue_roadmap">המשך מסלול</string>
    
    <!-- Posts -->
    <string name="posts_title">פוסטים</string>
    <string name="my_posts_title">הפוסטים שלי</string>
    <string name="create_post">צור פוסט חדש</string>
    <string name="post_title_hint">כותרת</string>
    <string name="post_content_hint">תוכן</string>
    <string name="add_image">הוסף תמונה</string>
    <string name="publish">פרסם</string>
    <string name="update">עדכן</string>
    <string name="delete">מחק</string>
    <string name="edit">ערוך</string>
    <string name="confirm_delete">האם אתה בטוח שברצונך למחוק את הפוסט?</string>
    <string name="yes">כן</string>
    <string name="no">לא</string>
    <string name="post_created">הפוסט נוצר בהצלחה</string>
    <string name="post_updated">הפוסט עודכן בהצלחה</string>
    <string name="post_deleted">הפוסט נמחק בהצלחה</string>
    
    <!-- Profile -->
    <string name="profile_title">פרופיל</string>
    <string name="edit_profile">ערוך פרופיל</string>
    <string name="save_profile">שמור שינויים</string>
    <string name="save_changes">שמור שינויים</string>
    <string name="change_photo">שנה תמונה</string>
    <string name="change_profile_photo">שנה תמונת פרופיל</string>
    <string name="tap_to_change_photo">לחץ על התמונה לשינוי תמונת הפרופיל</string>
    <string name="specialization">תחום התמחות</string>
    <string name="experience">ניסיון</string>
    <string name="logout">התנתק</string>
    <string name="profile_updated">הפרופיל עודכן בהצלחה</string>
    <string name="welcome_to_techlift">ברוכים הבאים ל-TechLift</string>
    <string name="profile_image">תמונת פרופיל</string>
    <string name="view_posts">צפה בפוסטים</string>
    <string name="share_location">שתף מיקום</string>
    <string name="view_community_posts">צפה בפוסטים</string>
    <string name="community_map_info">מפת הקהילה</string>
    <string name="community_map_instructions">לחץ על המשתמשים במפה לראות את הפרופיל שלהם</string>
    
    <!-- Bottom Navigation -->
    <string name="title_home">בית</string>
    <string name="title_roadmaps">מפות דרכים</string>
    <string name="title_learn">למידה</string>
    <string name="title_profile">פרופיל</string>
    
    <!-- Learn Page -->
    <string name="learn_title">מרכז הלמידה</string>
    <string name="courses_title">קורסים</string>
    <string name="tutorials_title">מדריכים</string>
    <string name="resources_title">משאבים</string>
    
    <!-- Home Page -->
    <string name="home_title">בית</string>
    <string name="welcome_message">ברוכים הבאים ל-TechLift</string>
    <string name="progress_overview">ההתקדמות שלך</string>
    <string name="recommended_courses">מומלץ עבורך</string>
    <string name="recent_activity">פעילות אחרונה</string>
</resources>